[gd_scene format=3 uid="uid://bqcdqgt43aon5"]

[ext_resource type="Script" uid="uid://de3sfbvowoa51" path="res://Scripts/ui/main_menu/profile/match_history_menu.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://c3otby17v2wau" path="res://Assets/fonts/monospace.tres" id="2_theme"]

[node name="MatchHistoryMenu" type="Control" unique_id=1941844375]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="." unique_id=1121342780]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=2049900877]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer" unique_id=1460731228]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="ContentColumn" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer" unique_id=590097594]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Panel/MarginContainer/HBoxContainer/ContentColumn" unique_id=125252214]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Match History"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/HBoxContainer/ContentColumn" unique_id=37999496]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/HBoxContainer/ContentColumn/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MatchListContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/ContentColumn/ScrollContainer/CenterContainer" unique_id=328505454]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PageContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/ContentColumn"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="FirstButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/ContentColumn/PageContainer"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "<<"

[node name="PrevButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/ContentColumn/PageContainer"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "<"

[node name="PageLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/ContentColumn/PageContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "1 / 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/ContentColumn/PageContainer"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = ">"

[node name="LastButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/ContentColumn/PageContainer"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = ">>"

[node name="ButtonContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer" unique_id=140757997]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="BackButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/ButtonContainer" unique_id=783066575]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"

[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
